--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,56 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@tailwind components;
+@tailwind utilities;
+
+@layer components {
+  .all-\[unset\] {
+    all: unset;
+  }
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+:root {
+  --bg: rgba(250, 247, 243, 1);
+  --body-copy-font-family: "Poppins-Regular", Helvetica;
+  --body-copy-font-size: 16px;
+  --body-copy-font-style: normal;
+  --body-copy-font-weight: 400;
+  --body-copy-letter-spacing: 0px;
+  --body-copy-line-height: 165.9000039100647%;
+  --CTA-hyperlink-font-family: "Poppins-Regular", Helvetica;
+  --CTA-hyperlink-font-size: 16px;
+  --CTA-hyperlink-font-style: normal;
+  --CTA-hyperlink-font-weight: 400;
+  --CTA-hyperlink-letter-spacing: 0px;
+  --CTA-hyperlink-line-height: normal;
+  --dark-copy: rgba(35, 36, 44, 1);
+  --h1-font-family: "PlayfairDisplay-Bold", Helvetica;
+  --h1-font-size: 102px;
+  --h1-font-style: normal;
+  --h1-font-weight: 700;
+  --h1-letter-spacing: 0px;
+  --h1-line-height: 110px;
+  --h2-font-family: "PlayfairDisplay-Italic", Helvetica;
+  --h2-font-size: 38px;
+  --h2-font-style: italic;
+  --h2-font-weight: 400;
+  --h2-letter-spacing: 0px;
+  --h2-line-height: normal;
+  --h3-font-family: "PlayfairDisplay-Italic", Helvetica;
+  --h3-font-size: 48px;
+  --h3-font-style: italic;
+  --h3-font-weight: 400;
+  --h3-letter-spacing: 0px;
+  --h3-line-height: normal;
+  --highlights: rgba(150, 79, 76, 1);
+  --menu-item-font-family: "Poppins-Regular", Helvetica;
+  --menu-item-font-size: 16px;
+  --menu-item-font-style: normal;
+  --menu-item-font-weight: 400;
+  --menu-item-letter-spacing: 0px;
+  --menu-item-line-height: 32px;
+  --subheading-font-family: "Poppins-Light", Helvetica;
+  --subheading-font-size: 16px;
+  --subheading-font-style: normal;
+  --subheading-font-weight: 300;
+  --subheading-letter-spacing: 0px;
+  --subheading-line-height: normal;
 }
